Navigator typo is to the right not left

--- a/user_guide.html
+++ b/user_guide.html
@@ -3,7 +3,7 @@ layout: manual
 title: Using PIPE 5
 ---
 
-Below find step by step instructions for using PIPE. Click on the navigator to the left to jump to a specific section.
+Below find step by step instructions for using PIPE. Click on the navigator to the right to jump to a specific section.
 
 
 
