Add PIPE screenshot to welcome page

--- a/index.html
+++ b/index.html
@@ -4,5 +4,8 @@ title: Welcome to PIPE 5
 ---
 
 <div id="home">
-  <p> Welcome to the new documentation for PIPE 5. Here you will find useful information on how to use PIPE.
+  <p> Welcome to the new documentation for PIPE 5. Here you will find useful information on how to use PIPE.</p>
+
+  <img id="pipe-img" src="images/screenshot.png" alt="PIPE screenshot">
 </div>
+
