--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Welcome to PIPE 5
 ---
 
 <div id="home">
-  <p> Welcome to the new documentation for PIPE 5. Here you will find useful information on how to use PIPE.</p>
+  <p> Welcome to the new documentation site for PIPE 5, the Platform Independent Petri Net Editor version 5. Here you will find useful information on how to use PIPE and what's changed with this version.</p>
 
   <img id="pipe-img" src="images/screenshot.png" alt="PIPE screenshot">
 </div>
