Improve User guide
* Rename the posts by pre-prending them with an alphabet letter
  this defines the order in which they should appear
* Improve the wording of a few sections
* Add a section, with examples about functional rates

--- a/user_guide.html
+++ b/user_guide.html
@@ -8,7 +8,7 @@ Below find step by step instructions for using PIPE. Click on the navigator to t
 
 
 
-{% for post in site.posts %}
+{% for post in site.posts reversed %}
 <div class="row-fluid">
     <h2 id="{{post.post-id}}">{{post.title}}</h2>
     <div class="span12">
