Add references to citing PIPE

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@ title: Welcome to PIPE 5
 
 <div id="home">
   <p> Welcome to the new documentation site for PIPE 5, the Platform Independent Petri Net Editor version 5. Here you will find useful information on how to use PIPE and what's changed with this version.</p>
+  <p>If you use PIPE in your research, we would be grateful if you would cite the relevant publications:</p>
+  <ul>
+    <li>N.J. Dingle, W.J. Knottenbelt and T. Suto. <a href="http://www.doc.ic.ac.uk/~wjk/publications/dingle-knottenbelt-suto-per-2009.pdf">PIPE2: A Tool for the Performance Evaluation of Generalised Stochastic Petri Nets</a> (PDF format). ACM SIGMETRICS Performance Evaluation Review (Special Issue on Tools for Computer Performance Modelling and Reliability Analysis), Vol. 36(4), March 2009, pp. 34-39.</li>
+    <li>P. Bonet, <a href="http://dmi.uib.es/~cllado/">C.M. Llado</a>, R. Puijaner and <a href="http://www.doc.ic.ac.uk/~wjk/">W.J. Knottenbelt</a>. <a href="http://www.doc.ic.ac.uk/~wjk/publications/bonet-llado-knottenbelt-puijaner-clei-2007.pdf">PIPE v2.5: A Petri Net Tool for Performance Modelling</a> (PDF format). Proc. 23rd Latin American Conference on Informatics (CLEI 2007), San Jose, Costa Rica, October 2007.</li>  
+  </ul>
+
+  <br>
+  <br>
 
   <img id="pipe-img" src="images/screenshot.png" alt="PIPE screenshot">
 </div>
